# PDFUtilities

./: .gitattributes  .gitignore  PDFUtilities.spec  README.md  build.py  build_app.py  build_macos.py  build_with_version.py  compressor.py  converter.py  main.py  pdf_utility.spec  pycompressor.py  pycompressor.spec  pyproject.toml  requirements.txt  test_ghostscript_detection.py  test_pyqt.py  version.py  workers.py
.github/workflows/: build.yml  code-quality.yml  release.yml
gui/: __init__.py  base_tab.py  compress_tab.py  convert_tab.py  custom_widgets.py  extract_text_tab.py  merge_tab.py  notification.py  split_tab.py  tabs.py
gui/tabs/: convert_to_image_tab.py  extract_text_tab.py
